vp-876 vp-877 fix checkout madal window showing into cart. fix cart spinner on mobile

--- a/ng-app/src/styles/blocks/main.scss
+++ b/ng-app/src/styles/blocks/main.scss
@@ -15,7 +15,7 @@ $sidebar-width: 18.75rem;
   left: 0;
   right: 0;
   top: 3.75rem;
-  z-index: 1000;
+  z-index: 1001;
 }
 
 .main {
@@ -110,7 +110,7 @@ $sidebar-width: 18.75rem;
   position: fixed;
   right: 0;
   top: 0;
-  z-index: 9000;
+  z-index: 1000;
 
   @include media-breakpoint-down(lg) {
     display: block;
