--- a/ng-app/src/styles/blocks/swipe.scss
+++ b/ng-app/src/styles/blocks/swipe.scss
@@ -9,7 +9,7 @@
 	top: 0;
 	transition: all .15s;
 	width: 18.75rem;
-	z-index: 10000;
+	z-index: 1002;
 
 	&__header
 	{
